--- a/src/componenets/sidebarcomp/index.css
+++ b/src/componenets/sidebarcomp/index.css
@@ -1,9 +1,46 @@
 .sidebar-container{
-    width: 40%;
-    height: 100%;
-    background-color: black;
-}
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
 
 .sidebar-div-uppertext{
+    position: relative;
+    font-size: 2rem;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    padding :5vw;
+    height: 120px;
     color: white;
+    align-items: center;
+}
+.text-container{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+}
+
+.bottom-text-conatiner >img{
+    position: absolute;
+    border: 2px solid white;
+    border-radius: 50%;
+    height: 88px;
+    width: 81px;
+    top: -39px;
+    left: 4px;
+}
+
+.middle-text-container{
+    color: rgb(255, 255, 255);
+}
+
+.last-section-container{
+    color: red;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
