--- a/src/componenets/contentReader/index.css
+++ b/src/componenets/contentReader/index.css
@@ -14,7 +14,7 @@
     margin: 20px;
     margin-top: 1px;
     margin-bottom: 1px;
-    background-color: antiquewhite;
+    background-color: rgb(222, 235, 245);
 }
 
 .user-data-container{
