--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
 .main-container-section{
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vw;
+    background-color: azure;
 }
 
 .sidebar-comp{
