--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
     position: relative;
     width: 100%;
     height: 100vw;
-    background-color: azure;
+    background-color: rgb(243, 240, 240);
 }
 
 .sidebar-comp{
