--- a/src/componenets/sidebarcomp/index.css
+++ b/src/componenets/sidebarcomp/index.css
@@ -22,6 +22,8 @@
     position: relative;
     display: flex;
     flex-direction: row;
+    background-color: rgb(255, 255, 255);
+    padding: 1rem;
 }
 
 .bottom-text-conatiner >img{
