--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
 .main-container-section{
     position: relative;
     width: 100%;
-    height: 100vw;
-    background-color: rgb(243, 240, 240);
+    height: 100%;
+   
 }
 
 .sidebar-comp{
