--- a/src/componenets/contentReader/index.css
+++ b/src/componenets/contentReader/index.css
@@ -14,7 +14,7 @@
     margin: 20px;
     margin-top: 1px;
     margin-bottom: 1px;
-    background-color: rgb(222, 235, 245);
+    background-color: rgb(255, 255, 255);
 }
 
 .user-data-container{
@@ -24,6 +24,7 @@
 }
 
 .icon-class-container > img{
-    width: 56px;
-    height: 56px;
+    width: 4vw;
+    height: 4vw;
+    margin-right: 5px;
 }
